--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a>
         	<button class="btn btn-primary btn-lg">alert</button>
         </a>
-        <a href="https://www.google.com/">
+        <a href="https://jakobmoldez.github.io/Question4/">
         	<button class="btn btn-primary btn-lg">document.write</button>
         </a>
     </div>
